--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,36 +10,50 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="speed" />
+        android:background="?colorPrimary"
+        android:orientation="vertical"
+        android:paddingLeft="72dp"
+        android:paddingRight="72dp"
+        android:paddingTop="16dp">
 
-    <EditText
-        android:id="@+id/speed"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:digits="0123456789"
-        android:inputType="number"
-        android:lines="1" />
+        <com.rengwuxian.materialedittext.MaterialEditText
+            android:id="@+id/speed"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:digits="0123456789"
+            android:hint="Speed"
+            android:inputType="number"
+            android:lines="1"
+            android:textSize="34sp"
+            app:met_baseColor="@android:color/white"
+            app:met_floatingLabel="highlight"
+            app:met_maxCharacters="3"
+            app:met_primaryColor="?colorAccent"
+            app:met_singleLineEllipsis="true" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="amount" />
+        <com.rengwuxian.materialedittext.MaterialEditText
+            android:id="@+id/amount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:digits="0123456789"
+            android:hint="Amount"
+            android:inputType="number"
+            android:lines="1"
+            android:textSize="34sp"
+            app:met_baseColor="@android:color/white"
+            app:met_floatingLabel="highlight"
+            app:met_maxCharacters="3"
+            app:met_primaryColor="?colorAccent"
+            app:met_singleLineEllipsis="true" />
 
-    <EditText
-        android:id="@+id/amount"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:digits="0123456789"
-        android:inputType="number"
-        android:lines="1" />
+        <Button
+            android:id="@+id/submit_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="submit" />
 
-    <Button
-        android:id="@+id/submit_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="submit" />
-
+    </LinearLayout>
 </LinearLayout>
